Minor changes in the card and overflow fixed

--- a/src/pages/Tracks.css
+++ b/src/pages/Tracks.css
@@ -4,9 +4,9 @@
   justify-content: center; 
   align-items: center; 
   min-height: 100vh; 
-  padding: 20px;
+
   text-align: center;
-  width:100vw;
+  width:100%;
 }
 
 .tracks-heading {
